--- a/Spring-Boot-Security-FetchAPI-master/src/main/resources/templates/layouts/main.html
+++ b/Spring-Boot-Security-FetchAPI-master/src/main/resources/templates/layouts/main.html
@@ -6,13 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Spring Security CRUD App with REST and Fetch API</title>
+    <title>REST and Fetch API</title>
 
-    <link rel="shortcut icon" th:href="@{/img/favicon-16.png}" type="image/x-icon"/>
-    <link rel="apple-touch-icon" sizes="57x57" th:href="@{/img/favicon-57.png}">
-    <link rel="apple-touch-icon" sizes="72x72" th:href="@{/img/favicon-72.png}">
-    <link rel="apple-touch-icon" sizes="114x114" th:href="@{/img/favicon-114.png}">
-    <link rel="apple-touch-icon" sizes="144x144" th:href="@{/img/favicon-144.png}">
 
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/css/styles.css}">
@@ -40,23 +35,7 @@
     </div>
 </nav>
 
-<div class="container">
-    <div class="row">
-        <div class="col text-center">
-            <h1 class="mt-5">CRUD App</h1>
-            <p class="lead">Практическая задача</p>
-            <ul class="list-unstyled">
-                <li>Spring MVC</li>
-                <li>Hibernate</li>
-            </ul>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col text-center">
-            <a type="button" th:href="@{/admin}" class="btn btn-secondary bg-secondary text-white">Get user list</a>
-        </div>
-    </div>
-</div>
+
 
 <th:block th:fragment="footer">
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
